--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,8 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true
+  "singleQuote": true,
+  "semi": true,
+  "trailingComma": "all",
+  "jsxSingleQuote": true,
+  "printWidth": 120,
+  "arrowParens": "avoid"
 }
