--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "advent-of-code": "^3.1.2",
-    "chalk": "^2.4.1",
-    "eslint": "^5.10.0"
+    "chalk": "^2.4.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
