--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-plugin-prettier": "^4.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init-day": "scaff create day --folder"
   },
   "repository": {
     "type": "git",
