--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "advent-of-code": "^3.1.2",
+    "canvas": "^2.8.0",
     "chalk": "^2.4.1"
   },
   "devDependencies": {
